# airbnb-clone-assignment

./: README.md  db.sqlite3  pyproject.toml
config/: settings.py
tweets/: admin.py  models.py  serializers.py  urls.py  views.py
tweets/migrations/: 0002_alter_like_tweet.py  0003_alter_like_user_alter_tweet_user.py
tweets/templates/: all_tweets.html
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_name.py  0003_alter_user_name.py  0004_alter_user_name.py
